# faq-floripa

./: .dockerignore  .gitignore~  Dockerfile  README.md  pyproject.toml  pyproject.toml~  requirements.txt
data/: faq.json
src/: config.py   database.py    embeddings.py  embeddings.py~  faq_data.py  faq_loader.py  faq_loader.py~  generator.py  main.py  main.py~  preprocessor.py  preprocessor.py~  prompt_builder.py  retrieval.py  retrieval.py~  telegram_bot.py  telegram_bot.py~  test_retrieval.py  test_retrieval.py~
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
tests/: test_prompt_builder.py  test_retrival.py
